增加新页面
增加一个新页面

--- a/note-pages.html
+++ b/note-pages.html
@@ -190,7 +190,7 @@
     MB_onMusicBoxInit();
 </script>
 <script>
-    postSizeSetRootPath("./pages/Notes/preview-post.json", "./pages/Notes/post-list.json", "./pages/Notes/jsons/");
+    postSizeSetRootPathById(1);
     previewPostSetLoadJsonPath("./pages/Notes/preview-post.json");
     loadNews();
     generatePostSideStart();
