--- a/badapple/badApple.html
+++ b/badapple/badApple.html
@@ -49,6 +49,7 @@
 				<button onclick="reset()">重 置</button>
 				<button onclick="start()">开 始</button>
 				<button onclick="stop()">停 止</button>
+				<button onclick="changeBgm()">更改BGM</button>
 			</p>
 			<audio id="bgm" src="./bgm/BadApple.mp3" controls hidden preload></audio>
 		</div>
@@ -102,6 +103,14 @@
 					preTime = temp;
 				}
 				$("#info").html(lyrics[preTime]);
+			}
+			
+			function changeBgm() {
+				if ($("#bgm")[0].src === "./bgm/BadApple.mp3") {
+					$("#bgm")[0].src = "./bgm/badapple2.mp3";
+				} else {
+					$("#bgm")[0].src = "./bgm/BadApple.mp3";
+				}
 			}
 
 			function start() {
