--- a/badapple/badApple.html
+++ b/badapple/badApple.html
@@ -114,6 +114,7 @@
 					document.getElementById("bgm").src = "./bgm/BadApple.mp3";
 				}	
 				timesaaaa = timesaaaa + 1;
+				reset();
 			}
 
 			function start() {
