--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html lang="zh-CN" prefix="og: http://ogp.me/ns#" class="js svg background-fixed">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="keywords" content="miskyle, 小奕, miskyle的博客, miskyle blog, 笔记" />
+    <meta name="keywords" content="SmileYik, 小奕, SmileYik的博客, SmileYik blog, 笔记" />
     <meta name="description" content="这个博客里记录着本人在学习过程中遇到的问题以及解决方式, 也记录着一些我在学习编程算法中的过程笔记等等." />
-    <meta name="author" content="miSkYle" />
-    <meta name="copyright" content="2021-2021 miSkYle." />
+    <meta name="author" content="SmileYik" />
+    <meta name="copyright" content="2021-2021 SmileYik." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="http://gmpg.org/xfn/11">
 
@@ -30,8 +30,8 @@
           href="./imgs/ico/cropped-5b7261fff016f339-180x180.jpg">
     <meta name="msapplication-TileImage"
           content="./imgs/ico/cropped-5b7261fff016f339-270x270.jpg">
-    <title>首页 - miSkYle's Blog</title>
-    
+    <title>首页 - SmileYik's Blog</title>
+
     <script id="twentyseventeen-skip-link-focus-fix-js-extra">
       let twentyseventeenScreenReaderText = {
           "quote": "<svg class=\"icon icon-quote-right\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-quote-right\" xlink:href=\"#icon-quote-right\"><\/use> <\/svg>",
@@ -54,7 +54,7 @@
             <div class="custom-header-media">
                 <div id="wp-custom-header" class="wp-custom-header"><img
                         src="./imgs/background.png" width="1920" height="1080"
-                        alt="miSkYle&#39;s Blog"></div>
+                        alt="SmileYik&#39;s Blog"></div>
             </div>
 
             <div class="site-branding" style="margin-bottom: 71px;">
@@ -62,11 +62,11 @@
 
                     <a href="./index.html" class="custom-logo-link" rel="home" aria-current="page"><img
                             width="250" height="250" src="./imgs/ico_normal.jpg"
-                            class="custom-logo" alt="miSkYle&#39;s Blog"
+                            class="custom-logo" alt="SmileYik&#39;s Blog"
                             srcset="./imgs/ico_normal.jpg 250w, ./imgs/ico_150.jpg 150w, ./imgs/ico_100.jpg 100w"
                             sizes="100vw"></a>
                     <div class="site-branding-text">
-                        <h1 class="site-title"><a href="./index.html" rel="home">miSkYle's Blog</a></h1>
+                        <h1 class="site-title"><a href="./index.html" rel="home">SmileYik's Blog</a></h1>
 
                         <p class="site-description">小奕的隐藏小屋</p>
                     </div><!-- .site-branding-text -->
