--- a/note-pages.html
+++ b/note-pages.html
@@ -3,10 +3,10 @@
 <html lang="zh-CN" prefix="og: http://ogp.me/ns#" class="js svg background-fixed">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="keywords" content="miskyle, 小奕, miskyle的笔记, miskyle blog, 笔记, 博客" />
+    <meta name="keywords" content="SmileYik, 小奕, SmileYik的笔记, SmileYik blog, 笔记, 博客" />
     <meta name="description" content="这个博客里记录着本人在学习过程中遇到的问题以及解决方式, 也记录着一些我在学习编程算法中的过程笔记等等." />
-    <meta name="author" content="miSkYle" />
-    <meta name="copyright" content="2021-2021 miSkYle." />
+    <meta name="author" content="SmileYik" />
+    <meta name="copyright" content="2021-2021 SmileYik." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="http://gmpg.org/xfn/11">
 
@@ -32,7 +32,7 @@
           href="imgs/ico/cropped-5b7261fff016f339-180x180.jpg">
     <meta name="msapplication-TileImage"
           content="./imgs/ico/cropped-5b7261fff016f339-270x270.jpg">
-    <title>笔记 - miSkYle's Blog</title>
+    <title>笔记 - SmileYik's Blog</title>
     <script src="js/jquery.min.js" id="jquery-js"></script>
     <script>
         MathJax = {
@@ -57,7 +57,7 @@
             <div class="custom-header-media">
                 <div id="wp-custom-header" class="wp-custom-header"><img
                         src="imgs/background.png" width="1920" height="1080"
-                        alt="miSkYle&#39;s Blog"></div>
+                        alt="SmileYik&#39;s Blog"></div>
             </div>
 
             <div class="site-branding">
@@ -67,11 +67,11 @@
                                                                                   height="250"
                                                                                   src="imgs/ico_normal.jpg"
                                                                                   class="custom-logo"
-                                                                                  alt="miSkYle&#39;s Blog"
+                                                                                  alt="SmileYik&#39;s Blog"
                                                                                   srcset="imgs/ico_normal.jpg 250w, ./imgs/ico_150.jpg 150w, ./imgs/ico_100.jpg 100w"
                                                                                   sizes="(max-width: 767px) 89vw, (max-width: 1000px) 54vw, (max-width: 1071px) 543px, 580px"></a>
                     <div class="site-branding-text">
-                        <p class="site-title"><a href="index.html" rel="home">miSkYle's Blog</a></p>
+                        <p class="site-title"><a href="index.html" rel="home">SmileYik's Blog</a></p>
 
                         <p class="site-description">小奕的隐藏小屋</p>
                     </div><!-- .site-branding-text -->
