--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="js svg background-fixed">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <base href="https://blog.smileyik.tk"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="keywords" content="SmileYik, 小奕, SmileYik的博客, SmileYik blog, 笔记" />
+    <meta name="description" content="这个博客里记录着本人在学习过程中遇到的问题以及解决方式, 也记录着一些我在学习编程算法中的过程笔记等等." />
+    <meta name="author" content="SmileYik" />
+    <meta name="copyright" content="2021-2022 SmileYik." />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="profile" href="http://gmpg.org/xfn/11">
+    <meta name="robots" content="max-image-preview:large">
+    <title>首页 - SmileYik's Blog</title>
+    <script>
+      (function (html) {
+        html.className = html.className.replace(/\bno-js\b/, 'js')
+      })(document.documentElement);
+    </script>
+    <script>
+      MathJax = {
+        tex: {inlineMath: [['$', '$'], ['\\(', '\\)']]},
+        skipHtmlTags: [
+          'script', 'noscript', 'style', 'textarea', 'pre',
+          'code', 'annotation', 'annotation-xml'
+        ]
+      };
+    </script>
+    <script id="twentyseventeen-skip-link-focus-fix-js-extra">
+      let twentyseventeenScreenReaderText = {
+        "quote": "<svg class=\"icon icon-quote-right\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-quote-right\" xlink:href=\"#icon-quote-right\"><\/use> <\/svg>",
+        "expand": "\u5c55\u5f00\u5b50\u83dc\u5355",
+        "collapse": "\u6298\u53e0\u5b50\u83dc\u5355",
+        "icon": "<svg class=\"icon icon-angle-down\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-down\" xlink:href=\"#icon-angle-down\"><\/use> <span class=\"svg-fallback icon-angle-down\"><\/span><\/svg>"
+      };
+    </script>
+    <script id="jQuery" src="./common/js/jquery.min.js"></script>
+    <script id="musicbox" src="./common/js/music-box.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="page" class="site">
+    </div>
   </body>
 </html>
+
