--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     </script>
     <script id="jQuery" src="./common/js/jquery.min.js"></script>
     <script id="musicbox" src="./common/js/music-box.js"></script>
+    <script id="copyCode" src="./common/js/copy-code.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
