--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,18 @@
 <html lang="en" class="js svg background-fixed">
   <head>
     <base href="https://blog.smileyik.tk"/>
-<!--    <base href="http://localhost:3000/">-->
+    <base href="http://localhost:3000/">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="keywords" content="SmileYik, 小奕, SmileYik的博客, SmileYik blog, 笔记" />
+    <meta name="keywords" content="SmileYik, 小奕, SmileYik的博客, SmileYik blog, 笔记, Minecraft, Bukkit, Spigot, Plugin, 算法" />
     <meta name="description" content="这个博客里记录着本人在学习过程中遇到的问题以及解决方式, 也记录着一些我在学习编程算法中的过程笔记等等." />
     <meta name="author" content="SmileYik" />
     <meta name="copyright" content="2021-2022 SmileYik." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <meta name="robots" content="max-image-preview:large">
+    <!-- 站长标签验证开始  -->
+    <meta name="msvalidate.01" content="649C559188B13E939FFD61AAA6CDF8AB" />
+    <!-- 站长标签验证结束  -->
     <title>首页 - SmileYik's Blog</title>
     <script>
       (function (html) {
