完善快速发布页面

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="js svg background-fixed">
   <head>
-<!--    <base href="https://blog.smileyik.tk"/>-->
+    <base href="https://blog.smileyik.tk"/>
     <base href="http://localhost:3000/">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="keywords" content="SmileYik, 小奕, SmileYik的博客, SmileYik blog, 笔记, Minecraft, Bukkit, Spigot, Plugin, 算法" />
