--- a/watchtogether/index.html
+++ b/watchtogether/index.html
@@ -1,44 +1,120 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="referrer" content="never"/>
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <title>一起看</title>
+    <script src="http://unpkg.byted-static.com/xgplayer/2.31.2/browser/index.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@1.2.0"></script>
 </head>
 <body>
-<label for="room_id">房间id：</label><input id="room_id" type="text" />
-<label for="enable-wss" hidden >启用WSS</label><input id="enable-wss" type="checkbox" value="wss" hidden />
-<button onclick="connect()">连接</button>
-<button onclick="disconnect()">断开</button>
+
+<div>
+    <label for="search-token">搜索视频密钥：</label><input id="search-token" type="password" placeholder="可以不填(减轻我服务器压力)">
+    <br/>
+    <label for="search-box">搜索视频链接：</label><input id="search-box" type="text" placeholder="搜索不到可能是等待时间太短" style="width: 50%">
+    <br/>
+    <label for="search-wait-time">搜索等待时间(秒)：</label><input id="search-wait-time" type="number" value="2" style="width: 30px">
+    <br/>
+    <label for="search-prefix-parwix">Parwix解析</label><input id="search-prefix-parwix" value="https://jx.bozrc.com:4433/player/?url=" type="checkbox" checked>
+    <br/>
+    <button onclick="searchVideo()">搜索</button>
+    <pre id="search-result" style="white-space: break-spaces; word-break: break-all"></pre>
+</div>
+<hr/>
+<div>
+    <label for="room_username">显示昵称：</label><input id="room_username" type="text" placeholder="可以不填"/>
+    <br/>
+    <label for="room_id">房间号码：</label><input id="room_id" type="text" />
+    <label for="enable-wss" hidden >启用WSS</label><input id="enable-wss" type="checkbox" value="wss" hidden />
+    <br/>
+    <button onclick="connect()">连接</button>
+    <button onclick="disconnect()">断开</button>
+</div>
+<hr/>
+
+<div>
+
+</div>
+<label for="video_url">远程使用播放链接: </label><input id="video_url" type="text" style="width: 50%"/>
 <br/>
-<label for="video_url">播放链接: </label><input id="video_url" type="text" />
+<label for="video_local_url">本地使用播放链接: </label><input id="video_local_url" type="text" placeholder="可以不填"  style="width: 50%"/>
+<br/>
 <button onclick="bindUrl()">应用链接</button>
-<button onclick="bindVideo()">寻找视频源</button>
-<button onclick="doSame()">主机强制同步</button>
+<button onclick="doSame()">同步</button>
 <button onclick="refreshUrl()">更新客户端连接</button>
 <br/>
 <span id="info">(若主机要求开始播放但是你没有开始播放则需要你手动播放一次后即可让主机控制)</span>
 <hr/>
-<iframe id="video_wrapper" src="https://jx.bozrc.com:4433/player/?url=" width="100%" height="600px" sandbox="allow-same-origin"></iframe>
+<div>
+    <p>观看列表：</p>
+    <p id="watch-list"></p>
+</div>
+<hr/>
+<div id="video_wrapper"></div>
+<p>
+    使用方法：<br>
+    主机： 先填入房间id再点连接， 若创建成功则会显示”你已经是主机“等提示，之后再在远程使用播放连接这一栏填入播放链接后点击应用链接即可<br>
+    观看： 填入已有的房间id后再点连接即可。<br>
+</p>
 <script>
-
     let nowUrl = location.href
     if (nowUrl.startsWith("https://")) {
         location.href = "http://" + location.href.substring(8)
     }
 
+    let player = new Player({
+        "id": "video_wrapper",
+        "url": "http://chimee.pyzy.net/vod/1.mp4",
+        "playsinline": true,
+        "whitelist": [
+            ""
+        ],
+        "pip": true,
+        "keyShortcut": "on",
+        "closeVideoClick": true,
+        "closeVideoDblclick": true,
+        "closeVideoTouch": true,
+        "x5-video-orientation": "landscape",
+        "x5-video-player-fullscreen": "true",
+        "playbackRate": [
+            0.5,
+            0.75,
+            1,
+            1.25,
+            1.5,
+            1.75,
+            2
+        ],
+        "videoInit": true
+    });
+
     let ws;
     let host = 0;
+    let url;
     let video;
     let id = -1
     const info = document.getElementById("info")
     const hostAddress = "1.14.193.189:8085"
     let isPlay = false
+    let users = []
 
     function connect() {
         let roomId = document.getElementById("room_id").value
+        video = document.getElementsByTagName("video")[0]
         let url = "://" + hostAddress + "/room/"
-        ws = new WebSocket((document.getElementById("enable-wss").checked ? "wss" : "ws") + url + roomId)
+        let username = document.getElementById("room_username").value;
+        if (username === "") {
+            username = ""
+            const pool = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+            for (let i = 0; i < 6; ++i) {
+                username += pool[Math.trunc(Math.random() * 26 * 2)]
+            }
+            document.getElementById("room_username").value = username
+        }
+
+        ws = new WebSocket((document.getElementById("enable-wss").checked ? "wss" : "ws") + url + roomId + "/" + username)
         ws.onerror = function (error) {
             console.log(error)
             info.innerText = "连接错误！连接已断开！" + error
@@ -50,7 +126,11 @@
                 clearInterval(id)
             }
             id = setInterval(() => {
-                ws.send("heart")
+                if (host === 1) {
+                    ws.send("hsame" + (isPlay ? 't' : 'f') + video.currentTime)
+                } else {
+                    ws.send("heart")
+                }
             }, 1000)
         }
 
@@ -60,15 +140,23 @@
             if (msg === 'host') {
                 host = 1
                 info.innerText = "你是主机， 你可以用打开及同步命令"
+                start()
             } else if (msg.startsWith("client")) {
                 host = 2
                 info.innerText = "你是观看者， 你只能观看"
                 ws.send("getVideo")
+                setTimeout(() => {
+                    ws.send("doSame")
+                }, 100)
             } else if (msg.startsWith("http")) {
                 url = msg;
                 bindUrlToVideo(url)
             } else if (host === 1) {
-
+                if (msg.startsWith("join")) {
+                    onJoin(msg.substring(4))
+                } else if (msg.startsWith("exit")) {
+                    onExit(msg.substring(4))
+                }
             } else {
                 if (msg.startsWith("video")) {
                     url = msg.substring(5)
@@ -94,6 +182,10 @@
                 } else if (msg.startsWith("rate")) {
                     video.playbackRate = msg.substring(4);
                     info.innerText = "主机要求更改放映速度";
+                } else if (msg.startsWith("join")) {
+                    onJoin(msg.substring(4))
+                } else if (msg.startsWith("exit")) {
+                    onExit(msg.substring(4))
                 }
             }
         }
@@ -105,34 +197,65 @@
         }
     }
 
-    function bindUrlToVideo(url) {
-        document.getElementById("video_wrapper").src = "https://jx.bozrc.com:4433/player/?url=" + url
-        setTimeout(bindVideo, 3000)
+    function onJoin(user) {
+        const oldUsers = users
+        for (let i = 0; i < oldUsers.length; ++i) {
+            if (oldUsers[i] === user) {
+                return
+            }
+        }
+        oldUsers.push(user)
+        users = oldUsers
+        updateUsers()
+    }
+
+    function onExit(user) {
+        const newUsers = []
+        for (let i = 0; i < users.length; ++i) {
+            if (users[i] !== user) {
+                newUsers.push(users[i])
+            }
+        }
+        users = newUsers
+        updateUsers()
+    }
+
+    function updateUsers() {
+        let userStr = ""
+        for (let i = 0; i < users.length; ++i) {
+            userStr += ", " + users[i]
+        }
+        if (userStr !== "") {
+            userStr = userStr.substring(2)
+        }
+        document.getElementById("watch-list").innerText = userStr
     }
 
     function bindUrl() {
         let videoUrl = document.getElementById("video_url").value;
+        let videoLocalUrl = document.getElementById("video_local_url").value;
         if (host === 1) {
-            bindUrlToVideo(videoUrl)
             ws.send("video" + videoUrl)
+            if (videoLocalUrl === "") {
+                videoLocalUrl = videoUrl
+            }
+            bindUrlToVideo(videoLocalUrl)
         } else {
             info.innerText = "主机才能用哦！"
         }
     }
 
-
-    function findVideo(window) {
-
+    function bindUrlToVideo(videoLocalUrl) {
+        if (Hls.isSupported() && videoLocalUrl.indexOf(".m3u8") !== -1) {
+            var hls = new Hls()
+            hls.loadSource(videoLocalUrl)
+            hls.attachMedia(video)
+        } else {
+            video.src = videoLocalUrl
+        }
     }
 
-
-    function bindVideo() {
-        const iframe1 = document.getElementById("video_wrapper").contentWindow
-        const myiframe = iframe1.document.getElementById("myiframe").contentWindow
-        video = myiframe.document.getElementById("video")
-
-        console.log(video)
-
+    function start() {
         video.onplay = () => {
             if (host === 1) {
                 ws.send("play")
@@ -162,7 +285,7 @@
         if (host === 1) {
             ws.send("same" + (isPlay ? 't' : 'f') + video.currentTime);
         } else {
-            info.innerText = "主机才能用哦！"
+            ws.send("doSame")
         }
     }
 
@@ -175,6 +298,36 @@
             ws.send("getVideo")
         }
     }
+
+    function searchVideo() {
+        let url = document.getElementById("search-box").value;
+        const wait = document.getElementById("search-wait-time").value;
+        const token = document.getElementById("search-token").value;
+        if (url && url.startsWith("http")) {
+            let xhr = new XMLHttpRequest()
+            if (document.getElementById("search-prefix-parwix").checked) {
+                url = document.getElementById("search-prefix-parwix").value + url
+            }
+            xhr.open("get", "http://" + hostAddress + "/video?wait=" + wait + "&url=" + encodeURI(url) + "&token=" + token)
+            xhr.onreadystatechange = () => {
+                if (xhr.readyState === 4) {
+                    if (xhr.status === 200) {
+                        const urls = JSON.parse(xhr.responseText)
+                        let text = "搜索到的结果如下：\n"
+                        for (let i = 0; i < urls.length; ++i) {
+                            text += urls[i] + "\n\n"
+                        }
+                        document.getElementById("search-result").innerText = text
+                    } else {
+                        document.getElementById("search-result").innerText = "未搜索成功..."
+                    }
+                }
+            }
+            document.getElementById("search-result").innerText = "正在搜索请稍后..."
+            xhr.send()
+        }
+    }
+
 </script>
 </body>
 </html>
