--- a/watchtogether/index.html
+++ b/watchtogether/index.html
@@ -3,53 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="referrer" content="never"/>
-    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <title>一起看</title>
     <script src="http://unpkg.byted-static.com/xgplayer/2.31.2/browser/index.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@1.2.0"></script>
+    <style>
+        summary {
+            user-select: none;
+        }
+    </style>
 </head>
 <body>
 
-<div>
-    <label for="search-token">搜索视频密钥：</label><input id="search-token" type="password" placeholder="可以不填(减轻我服务器压力)">
-    <br/>
-    <label for="search-box">搜索视频链接：</label><input id="search-box" type="text" placeholder="搜索不到可能是等待时间太短" style="width: 50%">
-    <br/>
-    <label for="search-wait-time">搜索等待时间(秒)：</label><input id="search-wait-time" type="number" value="2" style="width: 30px">
-    <br/>
-    <label for="search-prefix-parwix">Parwix解析</label><input id="search-prefix-parwix" value="https://jx.bozrc.com:4433/player/?url=" type="checkbox" checked>
-    <br/>
-    <button onclick="searchVideo()">搜索</button>
-    <pre id="search-result" style="white-space: break-spaces; word-break: break-all"></pre>
-</div>
+<details>
+    <summary style="color: #1c9bc2">视频解析</summary>
+    <hr>
+    <div>
+        <label for="search-token">搜索视频密钥：</label><input id="search-token" type="password" placeholder="可以不填(减轻我服务器压力)">
+        <br/>
+        <label for="search-box">搜索视频链接：</label><input id="search-box" type="text" placeholder="搜索不到可能是等待时间太短" style="width: 50%">
+        <br/>
+        <label for="search-wait-time">搜索等待时间(秒)：</label><input id="search-wait-time" type="number" aria-valuemin="0" min="0" value="0" style="width: 30px">
+        <br/>
+        <label for="search-prefix-parwix">Parwix解析</label><input id="search-prefix-parwix" value="https://jx.bozrc.com:4433/player/?url=" type="checkbox" checked>
+        <br/>
+        <button onclick="searchVideo()">搜索</button>
+        <pre id="search-result" style="white-space: break-spaces; word-break: break-all"></pre>
+    </div>
+</details>
 <hr/>
-<div>
-    <label for="room_username">显示昵称：</label><input id="room_username" type="text" placeholder="可以不填"/>
-    <br/>
-    <label for="room_id">房间号码：</label><input id="room_id" type="text" />
-    <label for="enable-wss" hidden >启用WSS</label><input id="enable-wss" type="checkbox" value="wss" hidden />
-    <br/>
-    <button onclick="connect()">连接</button>
-    <button onclick="disconnect()">断开</button>
-</div>
+<details open="open">
+    <summary style="color: blueviolet">一起看房间</summary>
+    <hr>
+    <div>
+        <label for="room_username">显示昵称：</label><input id="room_username" type="text" placeholder="可以不填"/>
+        <br/>
+        <label for="room_id">房间号码：</label><input id="room_id" type="text" />
+        <label for="enable-wss" hidden >启用WSS</label><input id="enable-wss" type="checkbox" value="wss" hidden />
+        <br/>
+        <button id="room_connect" onclick="connect()">连接</button>
+        <button onclick="disconnect()">断开</button>
+        <button onclick="shareRoom()">分享房间</button>
+    </div>
+</details>
 <hr/>
 
-<div>
+<details id="video_controller">
+    <summary style="color: cornflowerblue">电视操作站</summary>
+    <div>
+        <label for="video_url">远程使用播放链接: </label><input id="video_url" type="text" style="width: 50%"/>
+        <br/>
+        <label for="video_local_url">本地使用播放链接: </label><input id="video_local_url" type="text" placeholder="可以不填"  style="width: 50%"/>
+        <br/>
+        <button onclick="bindUrl()">应用链接</button>
+        <button onclick="doSame()">同步</button>
+        <button onclick="refreshUrl()">更新客户端连接</button>
+    </div>
+</details>
 
-</div>
-<label for="video_url">远程使用播放链接: </label><input id="video_url" type="text" style="width: 50%"/>
-<br/>
-<label for="video_local_url">本地使用播放链接: </label><input id="video_local_url" type="text" placeholder="可以不填"  style="width: 50%"/>
-<br/>
-<button onclick="bindUrl()">应用链接</button>
-<button onclick="doSame()">同步</button>
-<button onclick="refreshUrl()">更新客户端连接</button>
-<br/>
-<span id="info">(若主机要求开始播放但是你没有开始播放则需要你手动播放一次后即可让主机控制)</span>
 <hr/>
 <div>
-    <p>观看列表：</p>
-    <p id="watch-list"></p>
+    <p>观看列表：<span id="watch-list">还没有人观看哦</span></p>
+
+    <p id="info">(若主机要求开始播放但是你没有开始播放则需要你手动播放一次后即可让主机控制)</p>
 </div>
 <hr/>
 <div id="video_wrapper"></div>
@@ -59,11 +74,24 @@
     观看： 填入已有的房间id后再点连接即可。<br>
 </p>
 <script>
+    const hostAddress = "1.14.193.189:8085"
+
     let nowUrl = location.href
     if (nowUrl.startsWith("https://")) {
         location.href = "http://" + location.href.substring(8)
+    } else if (nowUrl.indexOf("?") !== -1 && nowUrl.indexOf("roomId") !== -1) {
+        let str = nowUrl.substring(nowUrl.indexOf("roomId"))
+        if (str.indexOf("&") !== -1) {
+            str = str.substring(0, str.indexOf("&"))
+        }
+        if (str.length > 7 && str.startsWith("roomId")) {
+            const roomId = str.substring(7)
+            setTimeout(() => {
+                document.getElementById("room_id").value = roomId;
+                document.getElementById("room_connect").click()
+            }, 100)
+        }
     }
-
     let player = new Player({
         "id": "video_wrapper",
         "url": "http://chimee.pyzy.net/vod/1.mp4",
@@ -89,19 +117,17 @@
         ],
         "videoInit": true
     });
-
     let ws;
     let host = 0;
-    let url;
     let video;
     let id = -1
     const info = document.getElementById("info")
-    const hostAddress = "1.14.193.189:8085"
     let isPlay = false
     let users = []
+    let roomId = null
 
     function connect() {
-        let roomId = document.getElementById("room_id").value
+        roomId = document.getElementById("room_id").value
         video = document.getElementsByTagName("video")[0]
         let url = "://" + hostAddress + "/room/"
         let username = document.getElementById("room_username").value;
@@ -118,6 +144,7 @@
         ws.onerror = function (error) {
             console.log(error)
             info.innerText = "连接错误！连接已断开！" + error
+            roomId = null
         }
 
         ws.onopen = function () {
@@ -139,8 +166,9 @@
             console.log(msg)
             if (msg === 'host') {
                 host = 1
-                info.innerText = "你是主机， 你可以用打开及同步命令"
+                info.innerText = "你是主机， 你可以用打开及同步命令, 电视操作站已为你打开"
                 start()
+                document.getElementById("video_controller").open = "open"
             } else if (msg.startsWith("client")) {
                 host = 2
                 info.innerText = "你是观看者， 你只能观看"
@@ -154,6 +182,7 @@
             } else if (host === 1) {
                 if (msg.startsWith("join")) {
                     onJoin(msg.substring(4))
+                    ws.send("list" + JSON.stringify(users))
                 } else if (msg.startsWith("exit")) {
                     onExit(msg.substring(4))
                 }
@@ -186,6 +215,9 @@
                     onJoin(msg.substring(4))
                 } else if (msg.startsWith("exit")) {
                     onExit(msg.substring(4))
+                } else if (msg.startsWith("list")) {
+                    users = JSON.parse(msg.substring(4))
+                    updateUsers()
                 }
             }
         }
@@ -194,6 +226,9 @@
             info.innerText = "连接已断开！"
             clearInterval(id)
             console.log(res)
+            users = []
+            updateUsers()
+            roomId = null
         }
     }
 
@@ -315,9 +350,15 @@
                         const urls = JSON.parse(xhr.responseText)
                         let text = "搜索到的结果如下：\n"
                         for (let i = 0; i < urls.length; ++i) {
-                            text += urls[i] + "\n\n"
+                            const url = urls[i]
+                            text += "\n"
+                            if (url.startsWith("http")) {
+                                text += "<details><summary style='user-select: none'> 结果1 <span style='cursor: pointer; color: #4a74e8' onclick='quickCopyUrl(\"" + url + "\")'>[复制链接]</span> <span style='cursor: pointer; color: blueviolet' onclick='quickInUrl(\"" + url + "\")'>[填入链接]</span></summary>" + url + "</details>"
+                            } else {
+                                text += urls[i]
+                            }
                         }
-                        document.getElementById("search-result").innerText = text
+                        document.getElementById("search-result").innerHTML = text
                     } else {
                         document.getElementById("search-result").innerText = "未搜索成功..."
                     }
@@ -325,6 +366,30 @@
             }
             document.getElementById("search-result").innerText = "正在搜索请稍后..."
             xhr.send()
+        }
+    }
+
+    function quickInUrl(url) {
+        document.getElementById("video_url").value = url
+        var even = window.event || arguments.callee.caller.arguments[0];
+        even.preventDefault();
+        even.stopPropagation();
+    }
+
+    function quickCopyUrl(url) {
+        navigator.clipboard.writeText(url);
+        var even = window.event || arguments.callee.caller.arguments[0];
+        even.preventDefault();
+        even.stopPropagation();
+    }
+
+    function shareRoom() {
+        if (roomId !== null) {
+            let url = "https://blog.smileyik.tk/watchtogether/?roomId=" + roomId
+            navigator.clipboard.writeText(url);
+            alert("分享链接已复制")
+        } else {
+            alert("你还没有加入一个房间哦")
         }
     }
 
