--- a/watchtogether/index.html
+++ b/watchtogether/index.html
@@ -5,7 +5,7 @@
     <meta name="referrer" content="never"/>
     <title>一起看</title>
     <script src="http://unpkg.byted-static.com/xgplayer/2.31.2/browser/index.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@1.2.0"></script>
+    <script src="http://blog.smileyik.tk/watchtogether/hls.min.js"></script>
     <style>
         summary {
             user-select: none;
