--- a/other/skyrimalchemy/index.html
+++ b/other/skyrimalchemy/index.html
@@ -5,7 +5,7 @@
         margin: 0;
         padding: 0;
       }
-    <style>
+    </style>
   </header>
   <body>
     <iframe src="http://1.14.193.189:30001/skyrimalchemy.html" style="width: 100%; height: 100%">
