--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="js svg background-fixed">
   <head>
-    <base href="https://blog.smileyik.tk"/>
+    <base href="https://blog.smileyik.eu.org"/>
     <base href="http://localhost:3000/">
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
