--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="js svg background-fixed">
   <head>
     <base href="https://blog.smileyik.eu.org"/>
-    <base href="http://localhost:3000/">
+    <!--<base href="http://localhost:3000/">-->
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="keywords" content="SmileYik, 小奕, SmileYik的博客, SmileYik blog, 笔记, Minecraft, Bukkit, Spigot, Plugin, 算法" />
